--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 14pt;
   line-height: 150%;
 }
+/*
 tr,td,table {
   padding: 0;
   margin: 0;
@@ -20,7 +21,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0
 }
-
+*/
 
 a { text-decoration: none; color: #888; }
 a:hover { text-decoration: underline; color: #aaa; }
@@ -49,4 +50,13 @@ a:hover { text-decoration: underline; color: #aaa; }
 
 #record {
 	z-index: 40;
+}
+
+#record table {
+	width: 700px;
+	text-align: center;
+}
+
+#record .template {
+	display: none;
 }
